# nana-ai

./: .gitignore  README.md  pyproject.toml
src/nana/: __init__.py  brain.py  capabilities.py  cli.py  memory.py  security.py
src/nana/web/: __init__.py  app.py
src/nana/web/static/: app.js  index.html  styles.css
tests/: test_nana.py
